force-app/main/default/objects/Apttus_Billing__Refund__c/Apttus_Billing__Refund__c.object-meta.xml
<CustomObject>
    <description>Represents Refunds given to the customer.</description>
    <label>Refund</label>
    <nameField>
        <displayFormat>RF-{0000000000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>