force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account  where the refund is associated.</description>
    <inlineHelpText>The account  where the refund is associated.</inlineHelpText>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>