force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Amount__c</fullName>
    <description>Amount of the refund.</description>
    <inlineHelpText>Amount of the refund.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>