force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ExternalSystemId__c</fullName>
    <description>The refund Id as stored in the extern system</description>
    <inlineHelpText>The refund Id as stored in the extern system</inlineHelpText>
    <label>External System Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>