force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__ExternalSystemStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ExternalSystemStatus__c</fullName>
    <description>The status of the refund in the external system</description>
    <inlineHelpText>The status of the refund in the external system</inlineHelpText>
    <label>External System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>