force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__RefundDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RefundDate__c</fullName>
    <description>Date of the refund.</description>
    <inlineHelpText>Date of the refund.</inlineHelpText>
    <label>Refund Date</label>
    <type>DateTime</type>
</CustomField>