force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__RefundNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RefundNumber__c</fullName>
    <description>The Custom Refund Number.</description>
    <inlineHelpText>The Custom Refund Number.</inlineHelpText>
    <label>Refund Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>