force-app/main/default/objects/Apttus_Billing__Refund__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>Status of the refund.</description>
    <inlineHelpText>Status of the refund.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>